Bug squashing.

--- a/public/stylesheets/gmaps4rails.css
+++ b/public/stylesheets/gmaps4rails.css
@@ -10,8 +10,8 @@
 }
 
 #gmaps4rails_map {
-  width: 800px;
-  height: 400px;
+	width: 500px;
+	height: 300px;
 }
 
 .bing_map {
